Race condition in JSXPathResult::visitAdditionalChildren during GC https://bugs.webkit.org/show_bug.cgi?id=309776 <rdar://172263146>

Reviewed by Chris Dumez.

This PR fixes a race condition in JSXPathResult::visitAdditionalChildren
which results in a use-after-free. The issue is that this function
iterates over XPathNodeList's internal vector but XPathNodeList's member
functions such as XPathNodeList::firstNode could mutate the vector via
XPathNodeList::sort, letting a GC thread to do a use-after-free.

Fixed the bug by guarding the access to m_nodeSet with a lock.

No new tests since there is no reliable reproduction.

* Source/WebCore/bindings/js/JSXPathResultCustom.cpp:
(WebCore::JSXPathResult::visitAdditionalChildren):
* Source/WebCore/xml/XPathResult.cpp:
(WebCore::XPathResult::XPathResult):
(WebCore::XPathResult::~XPathResult):
(WebCore::XPathResult::convertTo):
(WebCore::XPathResult::visitAdditionalChildren):
* Source/WebCore/xml/XPathResult.h:

Identifier: 305413.475@safari-7624-branch