Source/WebCore/bindings/js/JSXPathResultCustom.cpp
@@ -27,21 +27,12 @@
 #include "config.h"
 #include "JSXPathResult.h"
 
-#include "JSNodeCustom.h"
-#include "WebCoreOpaqueRootInlines.h"
-#include "XPathValue.h"
-
 namespace WebCore {
 
 template<typename Visitor>
 void JSXPathResult::visitAdditionalChildren(Visitor& visitor)
 {
-    auto& value = wrapped().value();
-    if (value.isNodeSet()) {
-        // FIXME: This looks like it might race, but I'm not sure.
-        for (auto& node : value.toNodeSet())
-            addWebCoreOpaqueRoot(visitor, node.get());
-    }
+    wrapped().visitAdditionalChildren(visitor);
 }
 
 DEFINE_VISIT_ADDITIONAL_CHILDREN(JSXPathResult);
